@@ -4,8 +4,8 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kie</groupId>
-    <artifactId>kie-parent-with-dependencies</artifactId>
-    <version>6.2.0.Final</version>
+    <artifactId>kie-parent</artifactId>
+    <version>7.3.0.Final</version>
     <!-- relativePath causes out-of-date problems on hudson slaves -->
     <!--<relativePath>../droolsjbpm-build-bootstrap/pom.xml</relativePath>-->
   </parent>
@@ -13,15 +13,7 @@
   <groupId>org.jbpm</groupId>
   <artifactId>jbpm</artifactId>
   <packaging>pom</packaging>
-  <!-- jBPM has it's own lifecycle and it's own version -->
-  <!-- Important a released version should always follow any of these patterns: -->
-  <!-- major.minor.micro.Alpha[n] -->
-  <!-- major.minor.micro.Beta[n] -->
-  <!-- major.minor.micro.CR[n] -->
-  <!-- major.minor.micro.Final -->
-  <!-- For example: 1.2.3 without the suffix ".Final" corrupts the OSGi eclipse updatesite -->
-  <!-- For example: 1.2.3.M2 corrupts the OSGi eclipse updatesite update order -->
-  <version>6.2.0.009</version>
+  <version>7.3.0.001</version>
 
   <name>jBPM :: Multiproject</name>
   <description>jBPM: a Business Process Management (BPM) Suite</description>
@@ -29,22 +21,24 @@
 
   <properties>
     <!--
-     These are properties used in the database profiles. Some of them must be initialized
-     empty so that Maven applies them via filtering to the resources. 
+     These properties are used in the database profiles. Some of them must be initialized as empty strings
+     so that Maven applies them via filtering.
      -->
-    <maven.btm.maxPoolSize>16</maven.btm.maxPoolSize>
     <maven.hibernate.dialect>org.hibernate.dialect.H2Dialect</maven.hibernate.dialect>
-    <maven.datasource.classname>bitronix.tm.resource.jdbc.lrc.LrcXADataSource</maven.datasource.classname>
+    <maven.datasource.classname>org.h2.jdbcx.JdbcDataSource</maven.datasource.classname>
     <maven.jdbc.driver.class>org.h2.Driver</maven.jdbc.driver.class>
-    <maven.jdbc.db.name />
-    <maven.jdbc.db.port />
-    <maven.jdbc.db.server />     
-    <maven.jdbc.driver.jar />
+    <maven.jdbc.db.name/>
+    <maven.jdbc.db.port/>
+    <maven.jdbc.db.server/>
+    <maven.jdbc.driver.jar/>
     <maven.jdbc.username>sa</maven.jdbc.username>
     <maven.jdbc.password>sasa</maven.jdbc.password>
-    <maven.jdbc.url>jdbc:h2:tcp://localhost/target/jbpm-test;MVCC=TRUE</maven.jdbc.url>
+    <maven.jdbc.url>jdbc:h2:tcp://localhost/${project.basedir}/target/jbpm-test;MVCC=TRUE</maven.jdbc.url>
     <maven.jdbc.schema>public</maven.jdbc.schema>
-    <drools.version>6.2.0.002</drools.version>
+
+    <findbugs.failOnViolation>true</findbugs.failOnViolation>
+    <drools.version>7.3.0.001</drools.version>
+    <kie.version>7.3.0.001</kie.version>
   </properties>
 
   <repositories>
@@ -79,9 +73,9 @@
   </repositories>
 
   <scm>
-    <connection>scm:git:git@github.com:droolsjbpm/jbpm.git</connection>
-    <developerConnection>scm:git:git@github.com:droolsjbpm/jbpm.git</developerConnection>
-    <url>https://github.com/droolsjbpm/jbpm</url>
+    <connection>scm:git:https://github.com:kiegroup/jbpm.git</connection>
+    <developerConnection>scm:git:git@github.com:kiegroup/jbpm.git</developerConnection>
+    <url>https://github.com/kiegroup/jbpm</url>
   </scm>
   <issueManagement>
     <system>jira</system>
@@ -89,9 +83,11 @@
   </issueManagement>
 
   <modules>
+    <module>jbpm-test-util</module>
     <module>jbpm-flow</module>
     <module>jbpm-flow-builder</module>
-    <module>jbpm-persistence-jpa</module>
+    <module>jbpm-persistence</module>
+    <module>jbpm-query-jpa</module>
     <module>jbpm-audit</module>
     <module>jbpm-bpmn2</module>
     <module>jbpm-bpmn2-emfextmodel</module>
@@ -101,11 +97,69 @@
     <module>jbpm-services</module>
     <module>jbpm-document</module>
     <module>jbpm-test</module>
-    <module>jbpm-examples</module>    
+    <module>jbpm-case-mgmt</module>
+    <module>jbpm-test-coverage</module>
+    <module>jbpm-examples</module>
+    <module>jbpm-installer</module>
+    <module>jbpm-container-test</module>
   </modules>
 
-  <dependencyManagement>  
-    <dependencies>      
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <additionalClasspathElements>
+              <additionalClasspathElement>${maven.jdbc.driver.jar}</additionalClasspathElement>
+            </additionalClasspathElements>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jbpm</groupId>
+        <artifactId>jbpm-bom</artifactId>
+        <version>${version.org.kie}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.jbpm</groupId>
+        <artifactId>jbpm-test-util</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.drools</groupId>
+        <artifactId>drools-bom</artifactId>
+        <version>${version.org.kie}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.dashbuilder</groupId>
+        <artifactId>dashbuilder-bom</artifactId>
+        <version>${version.org.dashbuilder}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.kie</groupId>
+        <artifactId>kie-dmn-bom</artifactId>
+        <version>${version.org.kie}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>simple-jndi</groupId>
+        <artifactId>simple-jndi</artifactId>
+        <version>0.11.4.1</version>
+      </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>jbpm-flow</artifactId>
@@ -150,7 +204,32 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-workitems-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-workitems-rest</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-workitems-webservice</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-workitems-bpmn2</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>jbpm-human-task</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-query-jpa</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -185,7 +264,11 @@
         <artifactId>jbpm-examples</artifactId>
         <version>${project.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-test-coverage</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>jbpm-human-task-core</artifactId>
@@ -271,7 +354,26 @@
         <artifactId>jbpm-services-ejb-timer</artifactId>
         <version>${project.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-remote-ejb-test-domain</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-persistence-api</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-case-mgmt-impl</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>jbpm-executor-ejb</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.drools</groupId>
         <artifactId>drools-beliefs</artifactId>
@@ -391,45 +493,15 @@
       <dependency>
         <groupId>org.kie</groupId>
         <artifactId>kie-api</artifactId>
-        <version>${drools.version}</version>
+        <version>${kie.version}</version>
       </dependency>
       <dependency>
         <groupId>org.kie</groupId>
         <artifactId>kie-internal</artifactId>
-        <version>${drools.version}</version>
+        <version>${kie.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <build>
-    <testResources>
-      <testResource>
-        <!-- TODO this overwrite is not normal -->
-        <directory>src/test/java</directory>
-      </testResource>
-      <testResource>
-        <directory>src/test/resources</directory>
-      </testResource>
-    </testResources>
-     <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <includes>
-              <include>**/*Test.java</include>
-            </includes>
-            <excludes>
-              <exclude>**/*AbstractTest.java</exclude>
-              <exclude>**/*JMS*Test.java</exclude>
-            </excludes>
-            <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
-          </configuration>
-        </plugin> 
-      </plugins>
-    </pluginManagement>
-  </build>
 
   <profiles>
     <profile>
@@ -445,30 +517,27 @@
     </profile>
 
     <profile>
-      <id>database</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <additionalClasspathElements>
-                <additionalClasspathElement>${maven.jdbc.driver.jar}</additionalClasspathElement>
-              </additionalClasspathElements>
-              <useSystemClassLoader>true</useSystemClassLoader>
-              <includes>
-                <include>**/*Test.java</include>
-              </includes>
-              <excludes>
-                <exclude>**/*AbstractTest.java</exclude>
-                <exclude>**/*JMS*Test.java</exclude>
-              </excludes>
-              <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
+      <id>mariadb</id>
+      <!-- Important: one still needs to specify the MariaDB JDBC driver jar!
+
+           Following are the default values for MariaDB started via Docker:
+           "docker run &#x002d;&#x002d;name mariadb-jbpm -e MYSQL_ROOT_PASSWORD="admin1234" -d -p 3306:3306 mariadb:latest"
+           (replace the "&#x002d;&#x002d;" with two "-"
+           More info at https://hub.docker.com/_/mariadb/-->
+      <properties>
+        <maven.hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</maven.hibernate.dialect>
+        <maven.datasource.classname>org.mariadb.jdbc.MySQLDataSource</maven.datasource.classname>
+        <maven.jdbc.driver.class>org.mariadb.jdbc.Driver</maven.jdbc.driver.class>
+        <maven.jdbc.db.name>mysql</maven.jdbc.db.name>
+        <maven.jdbc.db.port>3306</maven.jdbc.db.port>
+        <maven.jdbc.driver.jar/>
+        <maven.jdbc.username>root</maven.jdbc.username>
+        <maven.jdbc.password>admin1234</maven.jdbc.password>
+        <maven.jdbc.url>jdbc:mariadb://localhost:3306/mysql?pinGlobalTxToPhysicalConnection=true</maven.jdbc.url>
+        <maven.jdbc.schema>mysql</maven.jdbc.schema>
+      </properties>
     </profile>
 
   </profiles>
-    
+
 </project>
